2.3/files/add-html-nginx-multitool-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-html-nginx-multitool-deployment
  labels:
    app: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.0
        ports:
        - name: http-nginx
          containerPort: 80
        volumeMounts:
        - name: nginx-index-html
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:minimal
        ports:
        - name: http-multitool
          containerPort: 8080
      volumes:
      - name: nginx-index-html
        configMap:
          name: add-html-nginx-multitool-configmap
