2.3/files/ssl-nginx-add-html-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-nginx-add-html-deployment
  labels:
    app: ssl-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssl-nginx
  template:
    metadata:
      labels:
        app: ssl-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.0
        ports:
        - name: http-nginx
          containerPort: 80
        volumeMounts:
        - name: nginx-index-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-index-html
        configMap:
          name: ssl-nginx-add-html-configmap
